# gaul-lang

./: .gitignore  Cargo.toml  Gaul.g4  README.md  llms-full.txt  llms.txt
.github/workflows/: rust.yml
crates/gaul-core/: Cargo.toml
crates/gaul-core/src/: analysis.rs  builtins.rs  diagnostics.rs  keywords.rs  lib.rs  parser.rs  resolver.rs  scanner.rs  span.rs
crates/gaul-lang/: Cargo.toml
crates/gaul-lang/src/: interpreter.rs  lib.rs  main.rs
crates/gaul-lang/tests/: integration_tests.rs
crates/gaul-lsp/: Cargo.toml
crates/gaul-lsp/src/: main.rs
editors/neovim/: README.md
editors/neovim/ftdetect/: gaul.vim
editors/neovim/syntax/: gaul.vim
editors/vscode/: extension.js  language-configuration.json  package-lock.json  package.json
ftplugin/: gaul.vim
samples/: fib.gaul  lsp_demo.gaul  lsp_helper.gaul
samples/aoc/2025/: day01.gaul  day02.gaul  day07.gaul  day09.gaul  day10.gaul
samples/custom_keywords/: français.gaul  français.json  indonesia.gaul  indonesia.json  中文.gaul  中文.json
samples/tasks/: format.gaul  list.gaul  stats.gaul
src/: Gaul.g4  config.rs  diagnostics.rs  interpreter.rs  keywords.rs  lib.rs  main.rs  parser.rs  resolver.rs  scanner.rs
src/interpreter/: environment.rs  interpreter.rs  mod.rs  module_context.rs  native_function.rs  native_method.rs  stdlib.rs  value.rs
src/parser/: ast.rs  parser.rs
src/samples/: closure.gaul  fib.gaul  map.gaul
src/samples/custom_keywords/: français.gaul  français.json  indonesia.gaul  indonesia.json  中文.gaul  (+1 more)
src/scanner/: scanner.rs  token.rs
tests/: integration_tests.rs
(+20 files in other folders)
