[package]
name = "gaul-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gaul-lsp"
path = "src/main.rs"

[dependencies]
gaul-core = { path = "../gaul-core" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
